--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,9 +20,9 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>This web page is create to provide the best services of the marketplace, showing the 
-      information neccessary to make the best decision. And why do we area worry about you? well, 
-      A job well done gives joy in the chest .</p><!-- change this -->
+    <p>This web page is create to conveys confidence to the future customers, showing the information 
+      necessary to the people with the purpose of they known how our buisness works and can choose the 
+      best place to make a outdoors activity through our services.</p><!-- change this -->
 
     <h3>Audience</h3>
     <p>The target customers are the university youngs, after each semester they will need to take
@@ -57,10 +57,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#1b263b]</td>
-        <td class="secondary">[#415a77]</td>
-        <td class="accent1">[#778da9]</td>
-        <td class="accent2">[#e0e1dd]</td>
+        <td class="primary"></td>
+        <td class="secondary"></td>
+        <td class="accent1"></td>
+        <td class="accent2"></td>
       </tr>
     </table>
 
