--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -13,6 +13,7 @@
     <h1>Dry Oar Site Plan</h1>
     <h2>Juan Valencia</h2>
     <h2>WDD 130-22</h2>
+    <!-- This is a river running site-->
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
