--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,13 +11,13 @@
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt = "Dry Oar Logo">
+                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href = "#">Page 2</a>
-                <a href = "site-plan-rafting.html">Site Plan</a>
-                <a href ="contactus.html">Contact Us</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
@@ -26,12 +26,12 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Have An Adventure</h1>
-                <h4>Make Memories with Dry Oar </h4>
-                <div class='button-box'>
-                    <a class='book' href="rates.html">Book Now</a>
+                <h4>Make Memories with Dry Oar</h4>
+                <div class="button-box">
+                    <a class="book" href="rates.html">Book Now</a>
                 </div>
             </section>
-        </div>
+          </div>
         <main class="home-grid">
             <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpg" alt="river in forest">
@@ -57,7 +57,7 @@
             </section>
         </main>
         <footer>
-            <h3>Dry Oar &copy; 2022 - Juan, Valencia</h3>
+            <h3>Dry Oar © 20XX - Your First and Last Name Here</h3>
             <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
             <h3><a href="contactus.html">Contact Us</a></h3>
             <div class="social">
@@ -70,8 +70,7 @@
                 <a href="https://instagram.com" target="_blank">
                     <img src="images/instagram.png" alt="instagram icon">
                 </a>
-            </div>  
+            </div>
         </footer>
-    </div>
 </body>
 </html>
