changes about site plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -46,8 +46,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/1b263b-415a77-778da9-e0e1dd"
-      target="_blank">https://coolors.co/1b263b-415a77-778da9-e0e1dd</a>
+    <a href="https://coolors.co/1b263b-ffb703-415a77-ffffff"
+      target="_blank">https://coolors.co/1b263b-ffb703-415a77-ffffff</a>
 
     <table class="colors">
       <tr>
@@ -71,11 +71,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Annie Use Your Telescope
+      Heading Font: Lobster
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: Orelega One
+      Paragraph Font: Roboto
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
