--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
       <a href="positioning.html">Positioning Activity</a>
       <a href="#">Personal Website</a>
-      <a href="#">Personal Siteplan</a>
+      <a href="personal_website/site-plan.html">Personal Siteplan</a>
     </nav>   
     <p>Juan Valencia - WDD130</p>    
 </body>
