--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -55,7 +55,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary"></td><td class="secondary"></td><td class="accent1"></td><td class="accent2"></td></tr>
+        <tr><td class="primary">#E63946</td><td class="secondary">#457B9D</td><td class="accent1">#A8DADC</td><td class="accent2">#FFFFFF</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
