--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -124,7 +124,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>[FAQ]</h3>
+
+    <img src="images/site-plan-faq.jpg" alt="page2 wireframe" />
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
