adding images for site plan

--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -140,8 +140,12 @@
         So, let’s go to make a better place inside of this social media, one of the best ways to grow inside of any social network is by uploading original and valuable content, which means the people can use your content to resolve a problem, to get knowledge, or to help in some issue. No matter if you are noob editing videos or if you don’t have a good camera, people will recognize the value of your content.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/home-page-banner.jpg" alt="Banner of website">
+        <img src="images/home-page-phone.jpg" alt="Phone with apps" width="650px" height="600px">
+        <img src="images/home-black.jpg" alt="A girl" width="500px" height="600px">
+        <img src="images/home-green.jpg" alt="A girl with a dog" width="400px" height="600px">
+        <img src ="images/home-red.jpg" alt="A girl with a red sweater" width="500px" height="600px">
+        <img src ="images/home-yellow.jpg" alt="A girl with an umbrella" width="450px" height="600px">
 
       </ul>
       <h3>[Page 2]</h3>
@@ -166,8 +170,9 @@
         TikTok is now ranked as one of the best algorithms of all social networks, which means "TikTok" can satisfy users by recommending interesting videos in a fast way. Our goal is that each user sees your full video, if that happens the algorithm will find your video interesting and share it with other users. The key is to create a hook in the first few seconds of the video so that the user sees the entire video. See this video from my YouTube channel to know more about that.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/page2-instagram.jpg" alt="Phone with the app of instagram" width="600px" height="600px">
+        <img src="images/page2-tiktok.jpg" alt="A image of tiktok app" width="600px" height="600px">
+        <img src="images/page2-youtube.jpg" alt="A image of a laptop" width="550px" height="600px">
 
       </ul>
       <h3>[Page 3]</h3>
@@ -197,8 +202,8 @@
         In my opinion, YouTube, because in Tiktok you need to be one of the most famous to get income, in Instagram is similar to Tiktok, it depends a lot on the brand that wants to sponsor you and for a brand to sponsor you you need a good number of followers for not say millions. Instead, on YouTube, you can easily earn money through advertising on your video for every view your channel receives.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/FAQ-people.jpg" alt="People discussing something" width="900px" height="600px">
+        
 
       </ul>
       <hr>
