--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -148,7 +148,7 @@
         <img src ="images/home-yellow.jpg" alt="A girl with an umbrella" width="450px" height="600px">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>How Works?</h3>
       <p>
         How works the algorithm of Instagram?
       </p>
@@ -175,7 +175,7 @@
         <img src="images/page2-youtube.jpg" alt="A image of a laptop" width="550px" height="600px">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>FAQ</h3>
       <p>
         How do I know if the content of my profile on any social media is good?
       </p>
