--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -141,7 +141,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="images/home-page-banner.jpg" alt="Banner of website">
-        <img src="images/home-page-phone.jpg" alt="Phone with apps" width="650px" height="600px">
+        <img src="images/home-page-phone.jpg" alt="Phone with apps" width="550px" height="500px">
         <img src="images/home-black.jpg" alt="A girl" width="500px" height="600px">
         <img src="images/home-green.jpg" alt="A girl with a dog" width="400px" height="600px">
         <img src ="images/home-red.jpg" alt="A girl with a red sweater" width="500px" height="600px">
@@ -203,6 +203,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="images/FAQ-people.jpg" alt="People discussing something" width="900px" height="600px">
+        <img src="images/FAQ-people-meeting.jpg" alt="People discussing something" width="900px" height="600px">
         
 
       </ul>
