--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -131,7 +131,7 @@
       <p>
         On this web page, you will find some advice to grow your social network.
       </p>
-      <p>
+      <p class="bolder">
         Why is important to know the algorithm of social networks? 
       </p>
       <p>
@@ -139,7 +139,7 @@
         The algorithms of each social network are designed to keep the people inside of their website and consume the content of their creators, sometimes this is bad because you tend to lose a lot of time inside of these websites, and sometimes is good because you can learn different things about any topic.
         So, let’s go to make a better place inside of this social media, one of the best ways to grow inside of any social network is by uploading original and valuable content, which means the people can use your content to resolve a problem, to get knowledge, or to help in some issue. No matter if you are noob editing videos or if you don’t have a good camera, people will recognize the value of your content.
       </p>
-      <p>Images for the Home page</p>
+      <p class="bolder">Images for the Home page</p>
         <img src="images/home-page-banner.jpg" alt="Banner of website">
         <img src="images/home-page-phone.jpg" alt="Phone with apps" width="550px" height="500px">
         <img src="images/home-black.jpg" alt="A girl" width="500px" height="600px">
@@ -149,13 +149,13 @@
 
       </ul>
       <h3>How Works?</h3>
-      <p>
+      <p class="bolder">
         How works the algorithm of Instagram?
       </p>
       <p>
         Since 2020 the algorithm of Instagram switch to famous videos called “reels” and left out the photos because the reels are searched by algorithms around the world while people that find your profile will see your photos. If you want to grow your business inside of this social media, just upload reels as most as possible. I recommend this video from my YouTube channel to know more about this topic.
       </p>
-      <p>
+      <p class="bolder">
         How works the algorithm of YouTube?
       </p>
       <p>
@@ -163,45 +163,45 @@
         So, if you have a video of 10 minutes but the people just see 2 or 3 minutes, is less probably that YouTube shares your content with other people. The algorithm thinks that your video is a little boring.
         But if you have a video of 5 minutes and the majority of people see 2 or 3 minutes, so the algorithm will share your content. It thinks that your video is very interesting for the people in that niche. To know more about that, I recommend this video from my personal profile on YouTube.
       </p>
-      <p>
+      <p class="bolder">
         How works the algorithm of TikTok?
       </p>
       <p>
         TikTok is now ranked as one of the best algorithms of all social networks, which means "TikTok" can satisfy users by recommending interesting videos in a fast way. Our goal is that each user sees your full video, if that happens the algorithm will find your video interesting and share it with other users. The key is to create a hook in the first few seconds of the video so that the user sees the entire video. See this video from my YouTube channel to know more about that.
       </p>
-      <p>Images for the Page 2</p>
+      <p class="bolder">Images for the Page 2</p>
         <img src="images/page2-instagram.jpg" alt="Phone with the app of instagram" width="500px" height="400px">
         <img src="images/page2-tiktok.jpg" alt="A image of tiktok app" width="500px" height="400px">
         <img src="images/page2-youtube.jpg" alt="A image of a laptop" width="400px" height="500px">
 
       </ul>
       <h3>FAQ</h3>
-      <p>
+      <p class="bolder">
         How do I know if the content of my profile on any social media is good?
       </p>
       <p>
         See your stats to know the average of people who sees the video complete, if your average is over 50%, you are in a good way.
       </p>
-      <p>
+      <p class="bolder">
         What type of content do I need to upload to get more followers?
       </p>
       <p>
         The content evergreen will help you to get views through the years, the videos categorized as “evergreen” there are content that people keep searching for regardless of the season. For example, videos that explain “how to write a website?” or “how to create a YouTube channel?”.
 	      Sensational content will attract views for a certain season, maybe a couple of months at most, but in the end, people will stop looking for it and no one will continue to watch your video.
       </p>
-      <p>
+      <p class="bolder">
         Why I can’t see progress on my social media?
       </p>
       <p>
         Be patient, the progress takes time, the best thing you can do is made feedback to know what you can improve in your content.
       </p>
-      <p>
+      <p class="bolder">
         On what social networks I can earn a better income of money?
       </p>
       <p>
         In my opinion, YouTube, because in Tiktok you need to be one of the most famous to get income, in Instagram is similar to Tiktok, it depends a lot on the brand that wants to sponsor you and for a brand to sponsor you you need a good number of followers for not say millions. Instead, on YouTube, you can easily earn money through advertising on your video for every view your channel receives.
       </p>
-      <p>Images for the Page 3</p>
+      <p class="bolder">Images for the Page 3</p>
         <img src="images/FAQ-people.jpg" alt="People discussing something" width="900px" height="600px">
         <img src="images/FAQ-people-meeting.jpg" alt="People discussing something" width="900px" height="600px">
         
