--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -25,7 +25,7 @@
             </div>
             <section id="hero-msg">
                 <h1 class="home-title">Frequently Asked Question</h1>
-                <img class="hero-img-faq" src="images/thefaq.jpg" alt="People enjoying white water rafting">
+                <img class="hero-img-faq" src="images/wwrfaq.jpg" alt="People enjoying white water rafting">
             </section>
           </div>
         <div class="content-faq">
