css and html verified

--- a/wwr/faq.html
+++ b/wwr/faq.html
@@ -30,7 +30,7 @@
           </div>
         <div class="content-faq">
             <main>
-                <details class="story"  class="square">
+                <details class="story">
                     <summary >Is this a good trip for kids? What are the age ranges you allow?</summary>
 
                     <p>Absolutely this is a good trip for children of all ages. 
