--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -216,21 +216,21 @@
 
       <h3>Home</h3>
       <p>     
-        [Any additional details about page 2 that the wireframe does not make clear]
+        At the botton there will be a image slider using HTML And CSS only
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-frame.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>How Works?</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/works-frame.jpg" alt="page 2 wireframe">
+
+      <h3>FAQ</h3>
+      <p>         
+
+      </p>
+      <img src="images/faq-frame.jpg" alt="page 3 wireframe">
     </main>
   
   </body>
