--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -92,8 +92,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">How Works?</a>
+        <a href="#">FAQ</a>
       </nav>
       <hr>
       <h2>
@@ -104,10 +104,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          How works? <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          FAQ  <!-- change this -->
         </div>
 
         <div class="top">
@@ -222,7 +222,7 @@
 
       </p>
       <img src="images/works-frame.jpg" alt="page 2 wireframe">
-
+e
       <h3>FAQ</h3>
       <p>         
 
