--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -16,7 +16,6 @@
             <a href="index.html">HOME</a>
             <a href="howorks.html">HOW WORKS?</a>
             <a href="faq.html">FAQ</a>
-            <a href="site-plan.html">SITE PLAN</a>
         </nav>
     </header>
     <div id="banner">
@@ -41,7 +40,7 @@
                 No matter if you are noob editing videos or if you don’t have a 
                 good camera, people will recognize the value of your content.</p>
         </section>
-        <div class="container_main">
+        <div class="container_images">
             <div class="wrapper">
                     <img class="img_main" src="images/home-page-phone.jpg">
                     <img class="img_main" src="images/home-yellow.jpg">
