verification of html

--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Algorithm 152</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <a id="logo_link" href="index.html">
@@ -26,44 +28,45 @@
     <main>
         <section class="message">
             <h2>Why is important to know the algorithm of social networks?</h2>
-            <p>If you want to grow in your business, is important to know how 
-                social networks work, with the purpose to get better incomes. 
-                The algorithms of each social network are designed to keep the 
-                people inside of their website and consume the content of their 
-                creators, sometimes this is bad because you tend to lose a lot 
-                of time inside of these websites, and sometimes is good because 
-                you can learn different things about any topic. So, let’s go to 
-                make a better place inside of this social media, one of the best 
-                ways to grow inside of any social network is by uploading original 
-                and valuable content, which means the people can use your content 
-                to resolve a problem, to get knowledge, or to help in some issue. 
-                No matter if you are noob editing videos or if you don’t have a 
+            <p>If you want to grow in your business, is important to know how
+                social networks work, with the purpose to get better incomes.
+                The algorithms of each social network are designed to keep the
+                people inside of their website and consume the content of their
+                creators, sometimes this is bad because you tend to lose a lot
+                of time inside of these websites, and sometimes is good because
+                you can learn different things about any topic. So, let’s go to
+                make a better place inside of this social media, one of the best
+                ways to grow inside of any social network is by uploading original
+                and valuable content, which means the people can use your content
+                to resolve a problem, to get knowledge, or to help in some issue.
+                No matter if you are noob editing videos or if you don’t have a
                 good camera, people will recognize the value of your content.</p>
         </section>
         <div class="container_images">
             <div class="wrapper">
-                    <img class="img_main" src="images/home-page-phone.jpg">
-                    <img class="img_main" src="images/home-yellow.jpg">
-                    <img class="img_main" src="images/home-black.jpg">
-                    <img class="img_main" src="images/home-red.jpg">
+                <img class="img_main" src="images/home-page-phone.jpg" alt="photo of phone with apps">
+                <img class="img_main" src="images/home-yellow.jpg" alt="photo girl with yellow coat">
+                <img class="img_main" src="images/home-black.jpg" alt="photo girl in _blank and white">
+                <img class="img_main" src="images/home-red.jpg" alt="photo of girl with a red coat">
             </div>
         </div>
     </main>
     <footer>
-        <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150px" height="150px">
-            <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <div class="social">
-                <a href="https://youtube.com" target="_blank">
-                    <img class="social-media" src="images/youtube.png" alt="youtube icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img class="social-media" src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://github.com/" target="_blank">
-                    <img class="social-media" src="images/github.png" alt="github icon">
-                </a>
-            </div>
+        <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
+        <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
+        <div class="social">
+            <a href="https://youtube.com" target="_blank">
+                <img class="social-media" src="images/youtube.png" alt="youtube icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img class="social-media" src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://github.com/" target="_blank">
+                <img class="social-media" src="images/github.png" alt="github icon">
+            </a>
+        </div>
     </footer>
 </body>
+
 </html>
