--- a/personal_website/howorks.html
+++ b/personal_website/howorks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Algorithm 152</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <a id="logo_link" href="index.html">
@@ -16,7 +18,6 @@
             <a href="index.html">HOME</a>
             <a href="howorks.html">HOW WORKS?</a>
             <a href="faq.html">FAQ</a>
-            <a href="site-plan.html">SITE PLAN</a>
         </nav>
     </header>
     <div id="title_howworks">
@@ -24,68 +25,69 @@
     </div>
     <main>
         <section>
-            <img src="images/page2-instagram.jpg" alt="instagram image branding" width="300px" height="280px">
+            <img src="images/page2-instagram.jpg" alt="instagram image branding" width="300" height="280">
             <h3>How works the algorithm of Instagram?</h3>
-            <p>Since 2020 the algorithm of Instagram 
-                switch to famous videos called “reels” 
-                and left out the photos because the reels 
-                are searched by algorithms around the world 
-                while people that find your profile will see 
-                your photos. If you want to grow your business 
-                inside of this social media, just upload reels 
-                as most as possible. I recommend this video from 
+            <p>Since 2020 the algorithm of Instagram
+                switch to famous videos called “reels”
+                and left out the photos because the reels
+                are searched by algorithms around the world
+                while people that find your profile will see
+                your photos. If you want to grow your business
+                inside of this social media, just upload reels
+                as most as possible. I recommend this video from
                 my YouTube channel to know more about this topic.</p>
         </section>
         <section>
-            <img src="images/page2-youtube.jpg" alt="youtube app image" width="300px" height="310px">
+            <img src="images/page2-youtube.jpg" alt="youtube app image" width="300" height="310">
             <h3>How works the algorithm of YouTube?</h3>
-            <p>The algorithm of YouTube turns around 
-                how much time people spend seeing your 
-                video. So, if you have a video of 10 
-                minutes but the people just see 2 or 
-                3 minutes, is less probably that YouTube 
-                shares your content with other people. 
-                The algorithm thinks that your video is 
-                a little boring. But if you have a video 
-                of 5 minutes and the majority of people 
-                see 2 or 3 minutes, so the algorithm will 
-                share your content. It thinks that your 
-                video is very interesting for the people in 
-                that niche. To know more about that, I 
-                recommend this video from my personal 
+            <p>The algorithm of YouTube turns around
+                how much time people spend seeing your
+                video. So, if you have a video of 10
+                minutes but the people just see 2 or
+                3 minutes, is less probably that YouTube
+                shares your content with other people.
+                The algorithm thinks that your video is
+                a little boring. But if you have a video
+                of 5 minutes and the majority of people
+                see 2 or 3 minutes, so the algorithm will
+                share your content. It thinks that your
+                video is very interesting for the people in
+                that niche. To know more about that, I
+                recommend this video from my personal
                 profile on YouTube.</p>
         </section>
         <section>
-            <img src="images/page2-tiktok.jpg" alt="tiktok app image" width="300px" height="280px">
+            <img src="images/page2-tiktok.jpg" alt="tiktok app image" width="300" height="280">
             <h3>How works the algorithm of TikTok?</h3>
-            <p>TikTok is now ranked as one of the best 
-                algorithms of all social networks, which 
-                means "TikTok" can satisfy users by recommending 
-                interesting videos in a fast way. Our goal is 
-                that each user sees your full video, if that 
-                happens the algorithm will find your video 
-                interesting and share it with other users. 
-                The key is to create a hook in the first 
-                few seconds of the video so that the user 
-                sees the entire video. See this video from 
+            <p>TikTok is now ranked as one of the best
+                algorithms of all social networks, which
+                means "TikTok" can satisfy users by recommending
+                interesting videos in a fast way. Our goal is
+                that each user sees your full video, if that
+                happens the algorithm will find your video
+                interesting and share it with other users.
+                The key is to create a hook in the first
+                few seconds of the video so that the user
+                sees the entire video. See this video from
                 my YouTube channel to know more about that.</p>
         </section>
     </main>
     <footer>
-        <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150px" height="150px">
-            <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
-            <div class="social">
-                <a href="https://youtube.com" target="_blank">
-                    <img class="social-media" src="images/youtube.png" alt="youtube icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                    <img class="social-media" src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://github.com/" target="_blank">
-                    <img class="social-media" src="images/github.png" alt="github icon">
-                </a>
-            </div>
+        <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
+        <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
+        <h3><a href="site-plan.html">Site Plan</a></h3>
+        <div class="social">
+            <a href="https://youtube.com" target="_blank">
+                <img class="social-media" src="images/youtube.png" alt="youtube icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img class="social-media" src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://github.com/" target="_blank">
+                <img class="social-media" src="images/github.png" alt="github icon">
+            </a>
+        </div>
     </footer>
 </body>
+
 </html>
