html home page personal website

--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Algorithm 152</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -12,7 +12,6 @@
 <body>
     <div id="content">
         <header>
-            <div class="rectangle"></div>
             <nav>
                 <div class="leftnav">
                     <a href="index.html">Home</a>
@@ -28,10 +27,11 @@
                     <a href="contactus.html">Contact Us</a>
                 </div>
             </nav>
+            <div class="rectangle"></div>
         </header>
         <div id="banner">
             <div id="banner-box">
-                <img id="banner-img" src="images/home-page-banner.jpg" alt="banner of website">
+                <img class="responsive" src="images/home-page-banner.jpg" alt="banner of website">
             </div>
         </div>
         <main class="home-grid">
@@ -52,7 +52,7 @@
                         No matter if you are noob editing videos or if you don’t have a
                         good camera, people will recognize the value of your content.</p>
                 </section>
-                <div>
+                <div class="container_carousel">
                     <div class="carousel">
                     <ul class="slides">
                         <input type="radio" name="radio-buttons" id="img-1" checked />
@@ -110,7 +110,7 @@
         <footer>
             <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
             <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
                 <a href="https://youtube.com" target="_blank">
                     <img class="social-media" src="images/youtube.png" alt="youtube icon">
