--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -29,12 +29,12 @@
             </nav>
             <div class="rectangle"></div>
         </header>
-        <div id="banner">
-            <div id="banner-box">
-                <img class="responsive" src="images/home-page-banner.jpg" alt="banner of website">
-            </div>
-        </div>
         <main class="home-grid">
+            <div id="banner">
+                <div id="banner-box">
+                    <img class="responsive" src="images/home-page-banner.jpg" alt="banner of website">
+                </div>
+            </div>
             <div class="main-grid">
                 <section class="message">
                     <h2>Why is important to know the algorithm of social networks?</h2>
@@ -110,7 +110,7 @@
         <footer>
             <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
             <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
-            <h3><a href="site-plan.html" target="_blank">Site Plan</a></h3>
+            <h3><a class="site_plan" href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
                 <a href="https://youtube.com" target="_blank">
                     <img class="social-media" src="images/youtube.png" alt="youtube icon">
