--- a/personal_website/index.html
+++ b/personal_website/index.html
@@ -54,9 +54,9 @@
                 </section>
                 <div class="container_carousel">
                     <div class="carousel">
-                    <ul class="slides">
+                    <div class="slides-grid slides">
                         <input type="radio" name="radio-buttons" id="img-1" checked />
-                        <li class="slide-container">
+                        <div class="slide-container">
                         <div class="slide-image">
                             <img src="images/home-yellow.jpg" alt="photo girl with yellow coat">
                         </div>
@@ -68,9 +68,9 @@
                             <span>&rsaquo;</span>
                             </label>
                         </div>
-                        </li>
+                        </div>
                         <input type="radio" name="radio-buttons" id="img-2" />
-                        <li class="slide-container">
+                        <div class="slide-container">
                         <div class="slide-image">
                             <img src="images/home-black.jpg" alt="photo girl in black and white">
                         </div>
@@ -82,9 +82,9 @@
                             <span>&rsaquo;</span>
                             </label>
                         </div>
-                        </li>
+                        </div>
                         <input type="radio" name="radio-buttons" id="img-3" />
-                        <li class="slide-container">
+                        <div class="slide-container">
                         <div class="slide-image">
                             <img src="images/home-red.jpg" alt="photo of girl with a red coat">
                         </div>
@@ -96,13 +96,13 @@
                             <span>&rsaquo;</span>
                             </label>
                         </div>
-                        </li>
+                        </div>
                         <div class="carousel-dots">
                         <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
                         <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
                         <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
                         </div>
-                    </ul>
+                    </div>
                     </div>
                 </div>
             </div>
