--- a/personal_website/howorks.html
+++ b/personal_website/howorks.html
@@ -35,10 +35,10 @@
         <main>
             <div id="grid-works">
                 <div class="image_instagram">
-                    <img src="images/page2-instagram.jpg" alt="instagram image branding" width="300" height="280">
+                    <img class="card_img" src="images/page2-instagram.jpg" alt="instagram image branding" width="300" height="280">
                 </div>
                 <section class="instagram_section">
-                    <h3>How works the algorithm of Instagram?</h3>
+                    <h3 class="title_h3">How works the algorithm of Instagram?</h3>
                     <p>Since 2020 the algorithm of Instagram
                         switch to famous videos called “reels”
                         and left out the photos because the reels
@@ -49,8 +49,11 @@
                         as most as possible. I recommend this video from
                         my YouTube channel to know more about this topic.</p>
                 </section>
+                <div class="image_youtube">
+                    <img class="card_img" src="images/page2-youtube.jpg" alt="youtube app image" width="300" height="310">
+                </div>
                 <section class="youtube_section">
-                    <h3>How works the algorithm of YouTube?</h3>
+                    <h3 class="title_h3">How works the algorithm of YouTube?</h3>
                     <p>The algorithm of YouTube turns around
                         how much time people spend seeing your
                         video. So, if you have a video of 10
@@ -67,14 +70,11 @@
                         recommend this video from my personal
                         profile on YouTube.</p>
                 </section>
-                <div class="image_youtube">
-                    <img src="images/page2-youtube.jpg" alt="youtube app image" width="300" height="310">
-                </div>
                 <div class="image_tiktok">
-                    <img src="images/page2-tiktok.jpg" alt="tiktok app image" width="300" height="280">
+                    <img class="card_img" src="images/page2-tiktok.jpg" alt="tiktok app image" width="300" height="280">
                 </div>
                 <section class="tiktok_section">
-                    <h3>How works the algorithm of TikTok?</h3>
+                    <h3 class="title_h3">How works the algorithm of TikTok?</h3>
                     <p>TikTok is now ranked as one of the best
                         algorithms of all social networks, which
                         means "TikTok" can satisfy users by recommending
@@ -92,7 +92,7 @@
         <footer>
             <img class="logo" src="images/logo.png" alt="algorithm 152 logo" width="150" height="150">
             <h3>Algorithm 152 &copy; 2022 - Valencia Juan</h3>
-            <h3><a href="site-plan.html">Site Plan</a></h3>
+            <h3><a class="site_plan" href="site-plan.html" target="_blank">Site Plan</a></h3>
             <div class="social">
                 <a href="https://youtube.com" target="_blank">
                     <img class="social-media" src="images/youtube.png" alt="youtube icon">
@@ -107,5 +107,4 @@
         </footer>
     </div>
 </body>
-
 </html>
