--- a/personal_website/howorks.html
+++ b/personal_website/howorks.html
@@ -35,7 +35,8 @@
         <main>
             <div id="grid-works">
                 <div class="image_instagram">
-                    <img class="card_img" src="images/page2-instagram.jpg" alt="instagram image branding" width="300" height="280">
+                    <img class="card_img" src="images/page2-instagram.jpg" alt="instagram image branding" width="300"
+                        height="280">
                 </div>
                 <section class="instagram_section">
                     <h3 class="title_h3">How works the algorithm of Instagram?</h3>
@@ -50,7 +51,8 @@
                         my YouTube channel to know more about this topic.</p>
                 </section>
                 <div class="image_youtube">
-                    <img class="card_img" src="images/page2-youtube.jpg" alt="youtube app image" width="300" height="310">
+                    <img class="card_img" src="images/page2-youtube.jpg" alt="youtube app image" width="300"
+                        height="310">
                 </div>
                 <section class="youtube_section">
                     <h3 class="title_h3">How works the algorithm of YouTube?</h3>
@@ -107,4 +109,5 @@
         </footer>
     </div>
 </body>
+
 </html>
