--- a/personal_website/site-plan.html
+++ b/personal_website/site-plan.html
@@ -20,15 +20,12 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>I noticed that there are  a lot of misinformation to grow their accounts on social media that motivate the 
-        people to use "fake followers". To fight this, I decided to to gather the best information 
-        that explain how the algorithm of social media works. With the purpose of people knowing the good practices to obtain more followers.
+      <p>I noticed that there is a lot of misinformation to grow their accounts on social media that motivate people to use "fake followers". To fight this, I decided to gather the best information explaining how the social media algorithm works. With the purpose of people knowing the good practices to obtain more followers.
         </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>My target audience are "young adults" (between twelve and eighteen years old) and the "new adults"
-        (between twenty and thirty years old), because some these people wats to build a business around the social media networks
+      <p>My target audience is "young adults" (between twelve and eighteen years old) and the "new adults" (between twenty and thirty years old) because some of these people want to build a business around social media networks.
       </p>  <!-- change this -->
 
       <hr>
